tests/paczka1/small_fuzzy/43278675.err
Error in line 1: BUANd A209 88,5
Error in line 6: 4K0O5fb A218 80,5
Error in line 8: gfSgdH A209 61,1
Error in line 4: 3SaJRWTBiRs S471 84,1
